docs/api/qiskit/0.19/qiskit.ignis.logging.IgnisLogReader.md
---
title: IgnisLogReader
description: API reference for qiskit.ignis.logging.IgnisLogReader
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.ignis.logging.IgnisLogReader
---

# IgnisLogReader

<span id="qiskit.ignis.logging.IgnisLogReader" />

`IgnisLogReader` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.3/qiskit/ignis/logging/ignis_logging.py "view source code")

Class to read from Ignis log files

Reads and constructs tabular representation of logged data based on date/time and key criteria

## Methods

### get\_log\_files

<span id="qiskit.ignis.logging.IgnisLogReader.get_log_files" />

`IgnisLogReader.get_log_files()` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.3/qiskit/ignis/logging/ignis_logging.py "view source code")

Get Names of all log files (several may be present due to logging file rotation). File names are sorted by modification time.

**Returns**

list of all log file names

**Return type**

list

### read\_values

<span id="qiskit.ignis.logging.IgnisLogReader.read_values" />

`IgnisLogReader.read_values(log_files=None, keys=None, from_datetime=None, from_datetime_format=None, to_datetime=None, to_datetime_format=None)` [GitHub](https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.3/qiskit/ignis/logging/ignis_logging.py "view source code")

Retrieve log lines using key and date/time filtering criteria

#### Params:

log\_files: List of log files to read from keys: Retrieve only key value pairs of corresponding to keys A row with no matching keys will not be retrieved. If not specified, all keys are retrieved (optional)

from\_datetime(None): Retrieve only rows newer than the given date and time

from\_datetime\_format(None): datetime format string. If not specified will assume “%Y/%m/%d %H:%M:%S”

to\_datetime(None): Retrieve only rows older than the given date and time

to\_datetime\_format(None): datetime format string. If not specified will assume “%Y/%m/%d %H:%M:%S”

**Returns**

A list containing the retrieved rows of key pair values

**Return type**

list

